Remove < JDK5 calls